update: support multi RPC

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
-# ganti dengan Private Key Wallet Utama Sebagai Deployer
+# Replace with your main wallet private key to be used as deployer
 MAIN_PRIVATE_KEY=0xYourPrivateKey
-# rpc default
-RPC_URL=https://dream-rpc.somnia.network
-# chain id default
-CHAIN_ID=50312
-# explorer default, bisa diubah jika perlu
-EXPLORER_URL=https://shannon-explorer.somnia.network
-#jika belum melakukan deploy, CONTRACT_ADDRESS biarkan kosong, karena akan update secara otomatis setelah deploy kontrak.
-CONTRACT_ADDRESS=
 
+# Default RPC endpoints (separated by commas)
+RPC_URL=https://dream-rpc.somnia.network,https://rpc.ankr.com/somnia_testnet,https://somnia-poc.w3us.site/api/eth-rpc
+
+# Default chain ID
+CHAIN_ID=50312
+
+# Default explorer URL (change if necessary)
+EXPLORER_URL=https://shannon-explorer.somnia.network
+
+# Leave CONTRACT_ADDRESS empty if you haven't deployed yet.
+# It will be automatically updated after contract deployment.
+CONTRACT_ADDRESS=
