--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,5 @@
-# Replace with your main wallet private key to be used as deployer
-MAIN_PRIVATE_KEY=0xYourPrivateKey
-
-# Default RPC endpoints (separated by commas)
-RPC_URL=https://dream-rpc.somnia.network,https://rpc.ankr.com/somnia_testnet,https://somnia-poc.w3us.site/api/eth-rpc
-
-# Default chain ID
-CHAIN_ID=50312
-
-# Default explorer URL (change if necessary)
-EXPLORER_URL=https://shannon-explorer.somnia.network
-
-# Leave CONTRACT_ADDRESS empty if you haven't deployed yet.
-# It will be automatically updated after contract deployment.
+MAIN_PRIVATE_KEY=0xYourMainPrivateKey
+RPC_URL=https://tea-sepolia.g.alchemy.com/public
+CHAIN_ID=10218
+EXPLORER_URL=https://sepolia.tea.xyz/
 CONTRACT_ADDRESS=
